v1.0.0/modules/schema/pages/class/TransformerEndInfo.adoc
= `TransformerEndInfo`
:toclevels: 4


+++Transformer end data.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransformerEndInfo`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AssetInfo.adoc[`AssetInfo`]
*** *`TransformerEndInfo`*
 **** xref::class/OldTransformerEndInfo.adoc[`OldTransformerEndInfo`]


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TransformerEndInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}















TransformerMeshImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerStarImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerMeshImpedance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TransformerCoreAdmittance {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ShortCircuitTest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TransformerTankInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OpenCircuitTest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ShortCircuitTest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OpenCircuitTest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



NoLoadTest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PowerSystemResource {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



CatalogAssetType {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ProductAssetModel {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}










TransformerEndInfo -> TransformerMeshImpedance: ToMeshImpedances


TransformerEndInfo -> TransformerStarImpedance: TransformerStarImpedance


TransformerEndInfo -> TransformerMeshImpedance: FromMeshImpedances


TransformerEndInfo -> TransformerCoreAdmittance: CoreAdmittance


TransformerEndInfo -> ShortCircuitTest: EnergisedEndShortCircuitTests


TransformerEndInfo -> TransformerTankInfo: TransformerTankInfo


TransformerEndInfo -> OpenCircuitTest: EnergisedEndOpenCircuitTests


TransformerEndInfo -> ShortCircuitTest: GroundedEndShortCircuitTests


TransformerEndInfo -> OpenCircuitTest: OpenEndOpenCircuitTests


TransformerEndInfo -> NoLoadTest: EnergisedEndNoLoadTests


TransformerEndInfo -> PowerSystemResource: PowerSystemResources


TransformerEndInfo -> CatalogAssetType: CatalogAssetType


TransformerEndInfo -> Asset: Assets


TransformerEndInfo -> ProductAssetModel: ProductAssetModel


TransformerEndInfo -> DiagramObject: DiagramObjects


TransformerEndInfo -> InstanceSet: InstanceSet


TransformerEndInfo -> Name: Names


TransformerEndInfo -> ChangeSetMember: PropertiesCIMDataObject


TransformerEndInfo -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<TransformerTankInfo,`TransformerTankInfo`>>
| 1
| xref::class/TransformerTankInfo.adoc[`TransformerTankInfo`]
| +++Transformer tank data that this end description is part of.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<CoreAdmittance,`CoreAdmittance`>>
| 0..1
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]
| +++Core admittance calculated from this transformer end datasheet, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end info only.+++

| <<TransformerStarImpedance,`TransformerStarImpedance`>>
| 0..1
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]
| +++Transformer star impedance calculated from this transformer end datasheet.+++

| <<connectionKind,`connectionKind`>>
| 0..1
| xref::enumeration/WindingConnection.adoc[`WindingConnection`]
| +++Kind of connection.+++

| <<emergencyS,`emergencyS`>>
| 0..1
| xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Apparent power that the winding can carry under emergency conditions (also called long-term emergency power).+++

| <<endNumber,`endNumber`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Number for this transformer end, corresponding to the end's order in the PowerTransformer.vectorGroup attribute. Highest voltage winding should be 1.+++

| <<insulationU,`insulationU`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++Basic insulation level voltage rating.+++

| <<phaseAngleClock,`phaseAngleClock`>>
| 0..1
| https://w3id.org/linkml/Integer[`integer`]
| +++Winding phase angle where 360 degrees are represented with clock hours, so the valid values are {0, ..., 11}. For example, to express the second winding in code 'Dyn11', set attributes as follows: 'endNumber'=2, 'connectionKind' = Yn and 'phaseAngleClock' = 11.+++

| <<r,`r`>>
| 0..1
| xref::class/Resistance.adoc[`Resistance`]
| +++DC resistance.+++

| <<ratedS,`ratedS`>>
| 0..1
| xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Normal apparent power rating.+++

| <<ratedU,`ratedU`>>
| 0..1
| xref::class/Voltage.adoc[`Voltage`]
| +++Rated voltage: phase-phase for three-phase windings, and either phase-phase or phase-neutral for single-phase windings.+++

| <<shortTermS,`shortTermS`>>
| 0..1
| xref::class/ApparentPower.adoc[`ApparentPower`]
| +++Apparent power that this winding can carry for a short period of time (in emergency).+++

| <<EnergisedEndNoLoadTests,`EnergisedEndNoLoadTests`>>
| 0..*
| xref::class/NoLoadTest.adoc[`NoLoadTest`]
| +++All no-load test measurements in which this transformer end was energised.+++

| <<EnergisedEndOpenCircuitTests,`EnergisedEndOpenCircuitTests`>>
| 0..*
| xref::class/OpenCircuitTest.adoc[`OpenCircuitTest`]
| +++All open-circuit test measurements in which this transformer end was excited.+++

| <<EnergisedEndShortCircuitTests,`EnergisedEndShortCircuitTests`>>
| 0..*
| xref::class/ShortCircuitTest.adoc[`ShortCircuitTest`]
| +++All short-circuit test measurements in which this transformer end was energised.+++

| <<FromMeshImpedances,`FromMeshImpedances`>>
| 0..*
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'to' and other 'from' transformer ends.+++

| <<GroundedEndShortCircuitTests,`GroundedEndShortCircuitTests`>>
| 0..*
| xref::class/ShortCircuitTest.adoc[`ShortCircuitTest`]
| +++All short-circuit test measurements in which this transformer end was short-circuited.+++

| <<OpenEndOpenCircuitTests,`OpenEndOpenCircuitTests`>>
| 0..*
| xref::class/OpenCircuitTest.adoc[`OpenCircuitTest`]
| +++All open-circuit test measurements in which this transformer end was not excited.+++

| <<ToMeshImpedances,`ToMeshImpedances`>>
| 0..*
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]
| +++All mesh impedances between this 'from' and other 'to' transformer ends.+++

| <<CatalogAssetType,`CatalogAssetType`>>
| 0..1
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]
| +++Asset information (nameplate) for this catalog asset type.+++

| <<ProductAssetModel,`ProductAssetModel`>>
| 0..1
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]
| +++Product asset model which conforms to this catalog asset type.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets described by this data.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<PowerSystemResources,`PowerSystemResources`>>
| 0..*
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
| +++All power system resources with this datasheet information.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets described by this data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#CatalogAssetType]
=== `CatalogAssetType`
+++Asset information (nameplate) for this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.CatalogAssetType`
| Cardinality
| 0..1
| Type
| xref::class/CatalogAssetType.adoc[`CatalogAssetType`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#connectionKind]
=== `connectionKind`
+++Kind of connection.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.connectionKind`
| Cardinality
| 0..1
| Type
| xref::enumeration/WindingConnection.adoc[`WindingConnection`]


|===

//[discrete]
[#CoreAdmittance]
=== `CoreAdmittance`
+++Core admittance calculated from this transformer end datasheet, representing magnetising current and core losses. The full values of the transformer should be supplied for one transformer end info only.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.CoreAdmittance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerCoreAdmittance.adoc[`TransformerCoreAdmittance`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#emergencyS]
=== `emergencyS`
+++Apparent power that the winding can carry under emergency conditions (also called long-term emergency power).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.emergencyS`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

//[discrete]
[#endNumber]
=== `endNumber`
+++Number for this transformer end, corresponding to the end's order in the PowerTransformer.vectorGroup attribute. Highest voltage winding should be 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.endNumber`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#EnergisedEndNoLoadTests]
=== `EnergisedEndNoLoadTests`
+++All no-load test measurements in which this transformer end was energised.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.EnergisedEndNoLoadTests`
| Cardinality
| 0..*
| Type
| xref::class/NoLoadTest.adoc[`NoLoadTest`]


|===

//[discrete]
[#EnergisedEndOpenCircuitTests]
=== `EnergisedEndOpenCircuitTests`
+++All open-circuit test measurements in which this transformer end was excited.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.EnergisedEndOpenCircuitTests`
| Cardinality
| 0..*
| Type
| xref::class/OpenCircuitTest.adoc[`OpenCircuitTest`]


|===

//[discrete]
[#EnergisedEndShortCircuitTests]
=== `EnergisedEndShortCircuitTests`
+++All short-circuit test measurements in which this transformer end was energised.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.EnergisedEndShortCircuitTests`
| Cardinality
| 0..*
| Type
| xref::class/ShortCircuitTest.adoc[`ShortCircuitTest`]


|===

//[discrete]
[#FromMeshImpedances]
=== `FromMeshImpedances`
+++All mesh impedances between this 'to' and other 'from' transformer ends.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.FromMeshImpedances`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]


|===

//[discrete]
[#GroundedEndShortCircuitTests]
=== `GroundedEndShortCircuitTests`
+++All short-circuit test measurements in which this transformer end was short-circuited.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.GroundedEndShortCircuitTests`
| Cardinality
| 0..*
| Type
| xref::class/ShortCircuitTest.adoc[`ShortCircuitTest`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#insulationU]
=== `insulationU`
+++Basic insulation level voltage rating.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.insulationU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#OpenEndOpenCircuitTests]
=== `OpenEndOpenCircuitTests`
+++All open-circuit test measurements in which this transformer end was not excited.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.OpenEndOpenCircuitTests`
| Cardinality
| 0..*
| Type
| xref::class/OpenCircuitTest.adoc[`OpenCircuitTest`]


|===

//[discrete]
[#phaseAngleClock]
=== `phaseAngleClock`
+++Winding phase angle where 360 degrees are represented with clock hours, so the valid values are {0, ..., 11}. For example, to express the second winding in code 'Dyn11', set attributes as follows: 'endNumber'=2, 'connectionKind' = Yn and 'phaseAngleClock' = 11.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.phaseAngleClock`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]


|===

//[discrete]
[#PowerSystemResources]
=== `PowerSystemResources`
+++All power system resources with this datasheet information.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.PowerSystemResources`
| Cardinality
| 0..*
| Type
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#ProductAssetModel]
=== `ProductAssetModel`
+++Product asset model which conforms to this catalog asset type.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:AssetInfo.ProductAssetModel`
| Cardinality
| 0..1
| Type
| xref::class/ProductAssetModel.adoc[`ProductAssetModel`]

| Inherited from
| xref::class/AssetInfo.adoc[`AssetInfo`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#r]
=== `r`
+++DC resistance.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.r`
| Cardinality
| 0..1
| Type
| xref::class/Resistance.adoc[`Resistance`]


|===

//[discrete]
[#ratedS]
=== `ratedS`
+++Normal apparent power rating.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.ratedS`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

//[discrete]
[#ratedU]
=== `ratedU`
+++Rated voltage: phase-phase for three-phase windings, and either phase-phase or phase-neutral for single-phase windings.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.ratedU`
| Cardinality
| 0..1
| Type
| xref::class/Voltage.adoc[`Voltage`]


|===

//[discrete]
[#shortTermS]
=== `shortTermS`
+++Apparent power that this winding can carry for a short period of time (in emergency).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.shortTermS`
| Cardinality
| 0..1
| Type
| xref::class/ApparentPower.adoc[`ApparentPower`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ToMeshImpedances]
=== `ToMeshImpedances`
+++All mesh impedances between this 'from' and other 'to' transformer ends.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.ToMeshImpedances`
| Cardinality
| 0..*
| Type
| xref::class/TransformerMeshImpedance.adoc[`TransformerMeshImpedance`]


|===

//[discrete]
[#TransformerStarImpedance]
=== `TransformerStarImpedance`
+++Transformer star impedance calculated from this transformer end datasheet.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.TransformerStarImpedance`
| Cardinality
| 0..1
| Type
| xref::class/TransformerStarImpedance.adoc[`TransformerStarImpedance`]


|===

//[discrete]
[#TransformerTankInfo]
=== `TransformerTankInfo`
+++Transformer tank data that this end description is part of.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransformerEndInfo.TransformerTankInfo`
| Cardinality
| 1
| Type
| xref::class/TransformerTankInfo.adoc[`TransformerTankInfo`]


|===


